清理遗留 IN_PROGRESS 本地化文案并完成验证码与统计联调验证